hphp/hack/test/dot_php/invalid-hack-file.php.exp
File "invalid-hack-file.php", line 3, characters 1-74:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
